cambio en el tam;o de los fontawesome

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
             <div class="row">
               <div class="col-lg-12 col-md-12 col-12">
                 <ul class="align-self-end">
-                  <li><a href="https://www.instagram.com/rojas9321/" target="_blank"><i class="fab fa-instagram"></i></a></li> <!-- icono sm -->
-                  <li><a href="https://github.com/InesR21" target="_blank"><i class="fab fa-github-square"></i></a></li> <!-- icono sm -->
-                  <li><a href="https://twitter.com/Ines_RC" target="_blank"><i class="fab fa-twitter-square"></i></a></li> <!-- icono sm -->
+                  <li><a href="https://www.instagram.com/rojas9321/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li> <!-- icono sm -->
+                  <li><a href="https://github.com/InesR21" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li> <!-- icono sm -->
+                  <li><a href="https://twitter.com/Ines_RC" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li> <!-- icono sm -->
                 </ul>
               </div>
             </div>
