--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
           font-size: 1em;
           border: 1px solid #2f5f8d;
         }
+        .sm-footer {
+            position: absolute;
+            bottom: -100px;
+            left: 0;
+            right: 0;
+        }
       }
       /*media querys fin*/
     </style>
