--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
       .sm-footer {
           display: block;
           background: rgba(235, 240, 240, 0.788);
-          margin: 2em 0 0 0;
+          margin: 00 0 0;
           position: absolute;
-          bottom: 0;
+         top: 0;
           left: 0;
           right: 0;
       }
@@ -169,12 +169,7 @@
           font-size: 1em;
           border: 1px solid #2f5f8d;
         }
-        .sm-footer {
-            position: absolute;
-            bottom: -100px;
-            left: 0;
-            right: 0;
-        }
+
       }
       /*media querys fin*/
     </style>
