--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
           font-size: 1em;
           border: 1px solid #2f5f8d;
         }
+        p{
+          margin-top: 25px;
+        }
 
       }
       /*media querys fin*/
@@ -176,7 +179,7 @@
 </head>
 <body>
     <div class="container">
-      <div class="row">
+      <div class="row p">
         <div class="col-md-12">
             <div class="col-md-6 d">
                 <div class="nivel nombJugador">
@@ -215,9 +218,9 @@
             <div class="row">
               <div class="col-lg-12 col-md-12 col-12">
                 <ul class="align-self-end">
-                  <li><a href="https://www.instagram.com/rojas9321/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li> <!-- icono sm -->
-                  <li><a href="https://github.com/InesR21" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li> <!-- icono sm -->
-                  <li><a href="https://twitter.com/Ines_RC" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li> <!-- icono sm -->
+                  <li><a href="https://www.instagram.com/rojas9321/" target="_blank"><i class="fab fa-instagram "></i></a></li> <!-- icono sm -->
+                  <li><a href="https://github.com/InesR21" target="_blank"><i class="fab fa-github-square "></i></a></li> <!-- icono sm -->
+                  <li><a href="https://twitter.com/Ines_RC" target="_blank"><i class="fab fa-twitter-square "></i></a></li> <!-- icono sm -->
                 </ul>
               </div>
             </div>
