--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
         }
 
       }
+      @media (width: 700px) and (orientation: landscape) { 
+
+        .p {
+            margin-top: 155px;
+        }
+      }
       /*media querys fin*/
     </style>
 </head>
